BUG2404 [P] Fix no spacing between reviews and review form
(cherry picked from commit 579c3f53cbb030b2152169f30091576b396ee96c)

--- a/src/client/src/ui/ProductInformation/styles.scss
+++ b/src/client/src/ui/ProductInformation/styles.scss
@@ -201,8 +201,8 @@
 .product-content {
   .pl-50 {
     padding-left: 50px;
-    @media (max-width: $screen-sm-max) {
-      padding-left: 0px;
+    @media (max-width: $screen-md-max) {
+      padding-left: 0;
       margin-top: 50px;
     }
   }
